# Qt-projects

BitGrid/: BitGrid.h  CMakeLists.txt  Main.qml  README.md  main.cpp
Client_Server/: README.md
Client_Server/client/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
Client_Server/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  tasks.json  users.json
CodingCalculator/: CMakeLists.txt  Main.qml  README.md  codingcalculator.cpp  codingcalculator.h  main.cpp
CodingCalculator/configs/: bcm_config.json  charging_config.json  climate_config.json  devices.json  infotainment_config.json
CodingCalculator/samples/: bcm_samples.json  charging_samples.json  climate_samples.json  infotainment_samples.json
